kubernetes/network-policies/cicd/allow-harbor-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-harbor-internal
  namespace: cicd

spec:
  podSelector:
    matchLabels:
      app: harbor

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector: {}

  egress:
    - to:
        - podSelector: {}
