kubernetes/network-policies/cicd/allow-platform-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-platform-ingress
  namespace: cicd

spec:
  podSelector: {}

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: platform
