kubernetes/network-policies/cicd/cicd-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: cicd-default-deny
  namespace: cicd

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
